Fix update Auth process